rogue accessories update
all rogue accessory items introduced in config

--- a/server/plugins/Terraria/Data/crates.yml
+++ b/server/plugins/Terraria/Data/crates.yml
@@ -695,7 +695,7 @@
     progressRequired: 白金星舰
     items:
     - 星舰电池:2:5
-    - 星爆核心:1:1:0.1
+    - 星爆核心:1:1:0.2
   6:
     progressRequired: 星神游龙
     items:
@@ -758,7 +758,6 @@
       - 珊瑚:30:40
       - 海星:30:40
       - 贝壳:30:40
-      - 沙尘披风:1:1:0.3333
       - 天蓝石:1:1:0.3333
       - 金币:2
       - 弱效治疗药水:5:15
@@ -871,7 +870,7 @@
   血肉之墙:
     1:
       giveAllItems: false
-      amountToGive: 2
+      amountToGive: 3
       items:
       - 战士徽章
       - 游侠徽章
@@ -892,7 +891,7 @@
     3:
       items:
       - 恶魔之心
-      - 屠杀:1:1:0.1
+      - 屠杀:1:1:0.2
       - 金币:25
       - 治疗药水:5:15
   史莱姆皇后:
@@ -936,7 +935,7 @@
       - 强效治疗药水:5:15
       - 视域之魂:25:40
       - 机械车轮片
-      - 劲弩:1:1:0.1
+      - 劲弩:1:1:0.2
       - 金币:35
       - 强效治疗药水:5:15
     2:
@@ -957,7 +956,7 @@
     2:
       items:
       - 海波纹章
-      - 海之烧灼:1:1:0.1
+      - 海之烧灼:1:1:0.2
       - 腐蚀脊椎:1:1:0.3333
       - 核燃料棒:1:1:0.3333
       - 金币:30
@@ -985,7 +984,7 @@
     2:
       items:
       - 舐火甲壳:1:1:0.33
-      - 地狱降临:1:1:0.1
+      - 地狱降临:1:1:0.2
       - 魔鬼之庇护
       - 焦热地狱
       - 混乱精华:5:9
@@ -1018,8 +1017,8 @@
       - 断裂英雄剑
       - 灾劫虚空
       - 混乱石:1:1:0.33
-      - 再生护符:1:1:0.1
-      - 混乱之息:1:1:0.1
+      - 再生护符:1:1:0.2
+      - 混乱之息:1:1:0.2
       - 灾厄尘:30:35
       - 混乱精华:10:15
       - 金币:50
@@ -1038,10 +1037,10 @@
       - 孢子囊
       - 生命碎片:30:35
       - 小瓶毒液:8:16
-      - 吉他斧:1:1:0.05
+      - 吉他斧:1:1:0.1
       - 矮人法杖:1:1:0.5
-      - 刺钩:1:1:0.1
-      - 叶流:1:1:0.1
+      - 刺钩:1:1:0.2
+      - 叶流:1:1:0.2
       - 金币:50
       - 强效治疗药水:5:15
   阿娜希塔和利维坦:
@@ -1093,7 +1092,7 @@
       - 甲虫外壳:18:23
       - 日光精华:10:12
       - 锯刃镐:1:1:0.3333
-      - 庇护之刃:1:1:0.1
+      - 庇护之刃:1:1:0.2
       - 金币:60
       - 强效治疗药水:5:15
   瘟疫使者歌莉娅:
@@ -1132,7 +1131,7 @@
     2:
       items:
       - 翱翔徽章
-      - 女皇之翼:1:1:0.1
+      - 女皇之翼:1:1:0.2
       - 金币:75
       - 强效治疗药水:5:15
   猪鲨公爵:
@@ -1148,8 +1147,8 @@
     2:
       items:
       - 虾松露
-      - 猪鲨之翼:1:1:0.1
-      - 海爵剑:1:1:0.1
+      - 猪鲨之翼:1:1:0.2
+      - 海爵剑:1:1:0.2
       - 金币:75
       - 强效治疗药水:5:15
   毁灭魔像:
@@ -1170,7 +1169,7 @@
       - 血肉图腾:1:1:0.3333
     3:
       items:
-      - 维苏威阿斯:1:1:0.1
+      - 维苏威阿斯:1:1:0.2
       - 血肉晶簇
       - 金币:75
       - 强效治疗药水:5:15
@@ -1217,7 +1216,7 @@
       items:
       - 天界之翼
       - 夜明矿:90:110
-      - 彩虹猫矿车:1:1:0.1
+      - 彩虹猫矿车:1:1:0.2
       - 铂金币
       - 超级治疗药水:5:15
   痴愚金龙:
@@ -1232,7 +1231,7 @@
       items:
       - 痴愚金龙干细胞
       - 阳炎战旗:1:1:0.25
-      - 爆破剑:1:1:0.1
+      - 爆破剑:1:1:0.2
       - 闪耀金羽:15:21
       - 铂金币:1
       - 金币:50
@@ -1258,7 +1257,8 @@
       - 耀目穿刺者杖
     2:
       items:
-      - 纯元怒焰:1:1:0.1
+      - 纯元怒焰:1:1:0.2
+      - 敬天神盗盒:1:1:0.2
       - 神圣晶石:30:40
       - 浊火精华:25:35
       - 铂金币:3
@@ -1283,7 +1283,7 @@
       - 风暴龙骑士:1:1:0.3333
     2:
       items:
-      - 雷暴雨:1:1:0.1
+      - 雷暴雨:1:1:0.2
       - 装甲外壳:6:9
       - 铂金币:2
       - 至尊治疗药水:5:15
@@ -1347,7 +1347,7 @@
     2:
       items:
       - 星云之核
-      - 寒宙弹刃:1:1:0.1
+      - 寒宙弹刃:1:1:0.2
       - 宇宙锭:64:80
       - 铂金币:6
       - 终极治疗药水:5:15
@@ -1368,7 +1368,7 @@
       items:
       - Drew之翼
       - 魔君的礼物
-      - 亚利姆水晶:1:1:0.1
+      - 亚利姆水晶:1:1:0.2
       - 龙魂碎片:48:64
       - 铂金币:10
       - 终极治疗药水:5:15
