--- a/server/plugins/Terraria/Data/setting.yml
+++ b/server/plugins/Terraria/Data/setting.yml
@@ -233,6 +233,7 @@ deathMessages:
   - <victim> 满身疮痍
   - <victim> 的死毫无意义
   - <victim> 面带安详
+  - <victim> 的骨灰像雨点一样飘落
   - <victim> 多了一个肚脐眼
   - <victim> 被登dua郎
   - <victim> 心花怒放
