--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -572,9 +572,8 @@ sets:
     - §a不攻击时累积潜行值，最大50点
     - §a一旦你的潜行值满，下一次盗贼攻击可施展潜伏攻击
     - §b潜伏攻击：
-    - §b-> 大部分武器的潜伏攻击都有特殊效果
-    - §b-> 获得相当于当前潜行值的盗贼百分比伤害
-    - §b-> 依据当前的潜行值，按比例额外获得20暴击率
+    - §b-> 绝大部分武器的潜伏攻击都拥有特殊效果
+    - §b-> 获得相当于当前潜行值10%的盗贼百分比伤害和暴击率
     attributes:
       stealthLimit: 50
   钨钢召唤套装:
@@ -678,8 +677,12 @@ sets:
     - §a套装效果： 
     - §a+3 生命恢复
     - §a+10% 盗贼伤害
-    - §a+60 潜行值上限
     - §a增加水下适应性
+    - §a不攻击时累积潜行值，最大60点
+    - §a一旦你的潜行值满，下一次盗贼攻击可施展潜伏攻击
+    - §b潜伏攻击：
+    - §b-> 绝大部分武器的潜伏攻击都拥有特殊效果
+    - §b-> 获得相当于当前潜行值10%的盗贼百分比伤害和暴击率
     attributes:
       damageRogueMulti: 0.1
       regen: 3
